--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.4",
+    "react-navigation-stack": "^1.7.3",
     "react-navigation-tabs": "^2.5.1",
     "react-redux": "^7.1.1",
     "reactotron-react-native": "^3.6.5",
